# corruption-bedrock-oss

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
glad/: glad.c  glad.h
src/: Corruption.cpp  Corruption.h  Hooks.cpp
src/events/: Cancellable.h  EventChannel.h  EventPriority.h  PacketEventFactory.cpp  PacketEventFactory.h
src/events/impl/: BlockEvents.h  MiscEvents.h  PacketEvents.h  PlayerEvents.h  RenderEvents.h
src/gui/: Roboto_Regular.h  imgui_impl.cpp
src/module/: BoundValue.h  Module.cpp  Module.h  ModuleManager.h  ToggleModule.cpp  ToggleModule.h  Value.h
src/module/impl/: AntiCheat.cpp  AntiCheat.h  AntiCrash.cpp  AntiCrash.h  Commands.cpp  Commands.h  FancyChat.cpp  FancyChat.h  Keybinds.cpp  Keybinds.h  SimpleModules.cpp  SimpleModules.h
src/module/impl/combat/: AimBot.cpp  AimBot.h  Aura.cpp  Aura.h  AutoHeal.cpp  AutoHeal.h  BowAim.cpp  BowAim.h  Hitboxes.cpp  Hitboxes.h
src/module/impl/move/: Glide.cpp  Glide.h  NoFall.cpp  NoFall.h  RideSpeed.cpp  RideSpeed.h  Speed.cpp  Speed.h  Sprint.cpp  Sprint.h  Step.cpp  Step.h  Velocity.cpp  Velocity.h
src/module/impl/render/: ESP.cpp  ESP.h  HUD.cpp  HUD.h
src/module/impl/world/: NoteBot.cpp  NoteBot.h  Nuker.cpp  Nuker.h  Phase.cpp  Phase.h  Scaffold.cpp  Scaffold.h  SongStealer.cpp  SongStealer.h  Wallhack.cpp  Wallhack.h
src/packet/: AnonymousPacket.h  AttackPacket.h  EquipPacket.h  PlaceBlockPacket.h  ReleasePacket.h  StartUsePacket.h
src/util/: Log.cpp  Log.h  MCPELauncherAPI.h  MemoryPoison.h  NBSReader.cpp  NBSReader.h  PatchUtils.cpp  PatchUtils.h  StaticHook.h  UWPString.h  Util.cpp  Util.h
